Added more information and cleaned up code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <!--School-->
         <div id="school" class="bg-white rounded-tl-lg rounded-tr-lg py-20">
-          <img class="w-60 h-60 rounded-full border-solid border-2 border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300"> <!--School img-->
+          <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-xl" src="images/School.svg" alt="School glyph" width="300"> <!--School img-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
@@ -147,43 +147,43 @@
               <h1 id="skills" class="text-3xl font-bold">Skills</h1>
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--C++-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/C++.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <!--HTML-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/HTML.svg" alt="HTML" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Python-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/Python.svg" alt="Python" width="80">
                   <p class="pt-2 text-lg">Python</p>
-                </div class="hover:text-green-300">
+                </div class="">
                 <!--Java-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/Java.svg" alt="Java" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--Github-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="Github" width="80">
                   <p class="pt-2 text-lg">Github</p>
-                </div class="hover:text-green-300">
+                </div class="">
                 <!--Figma-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/Figma.svg" alt="Figma" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Tailwind-->
-                <div class="hover:text-green-300">
+                <div class="">
                   <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
-                <!--React-->
-                <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/React.svg" alt="React" width="80">
+                <!--PHP-->
+                <div class="">
+                  <img class="rounded-full mx-auto" src="images/PHP.svg" alt="React" width="80">
                   <p class="pt-2 text-lg">PHP</p>
                 </div>
               </div>
@@ -195,31 +195,31 @@
               <!--Projects in figma-->
               <p class="p-4 text-2xl">Design</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                <div>
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                  <p class="pt-2 text-lg">Thing 1</p>
+                <div class="hover:text-green-300">
+                  <img class="rounded-full mx-auto" src="images/Cover.png" alt="Playlist Cover img" width="150">
+                  <p class="pt-2 text-lg">Playlist Covers</p>
                 </div>
-                <div>
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                  <p class="pt-2 text-lg">Thing 2</p>
+                <div class="hover:text-green-300">
+                  <img class="rounded-full mx-auto" src="images/Music.png" alt="Music mock up" width="150">
+                  <p class="pt-2 text-lg">Music player</p>
                 </div>
-                <div>
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                  <p class="pt-2 text-lg">Thing 3</p>
+                <div class="hover:text-green-300">
+                  <img class="rounded-full mx-auto" src="images/Portfolio.png" alt="Portfolio storyboard" width="150">
+                  <p class="pt-2 text-lg">Portfolio</p>
                 </div>
               </div>
-              <!--Projects in python-->
-              <p class="p-4 text-2xl mt-5">Python</p>
+              <!--Projects in Code-->
+              <p class="p-4 text-2xl mt-5">Code</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
-                <div>
+                <div class="hover:text-green-300">
                   <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
                   <p class="pt-2 text-lg">Thing 4</p>
                 </div>
-                <div>
+                <div class="hover:text-green-300">
                   <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
                   <p class="pt-2 text-lg">Thing 5</p>
                 </div>
-                <div>
+                <div class="hover:text-green-300">
                   <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
                   <p class="pt-2 text-lg">Thing 6</p>
                 </div>
@@ -253,17 +253,17 @@
             <!--Footer-->
             <footer>
               <div class="p-4 mb-5">
-                <h1 class="text-3xl font-bold">Socials</h1>
-                <div class="">
-                  <div>
+                <h1 class="text-3xl font-bold">Contact</h1>
+                <div class="flex flex-row justify-center">
+                  <div class="m-5 hover:text-green-300">
                     <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
                     <p class="pt-2 text-sm">LinkedIn</p>
                   </div>
-                  <div>
+                  <div class="m-5 hover:text-green-300">
                     <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
                     <p class="pt-2 text-sm">E-mail</p>
                   </div>
-                  <div>
+                  <div class="m-5 hover:text-green-300">
                     <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
                     <p class="pt-2 text-sm">Github</p>
                   </div>
