--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <!--School-->
         <div id="school" class="bg-white rounded-tl-lg rounded-tr-lg py-20">
-          <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-xl" src="images/School.svg" alt="School glyph" width="300"> <!--School img-->
+          <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300"> <!--School img-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
@@ -256,15 +256,17 @@
                 <h1 class="text-3xl font-bold">Contact</h1>
                 <div class="flex flex-row justify-center">
                   <div class="m-5 hover:text-green-300">
-                    <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
+                    <img class="rounded-full mx-auto border border-black" src="images/LinkedIn.svg" alt="Linkedi" width="50">
                     <p class="pt-2 text-sm">LinkedIn</p>
                   </div>
+                  <a href="mailto: gv4281@wayne.edu">
+                    <div class="m-5 hover:text-green-300">
+                      <img class="rounded-full mx-auto border border-black" src="images/Mail.svg" alt="Mail" width="50">
+                      <p class="pt-2 text-sm">E-mail</p>
+                    </div>
+                  </a>
                   <div class="m-5 hover:text-green-300">
-                    <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
-                    <p class="pt-2 text-sm">E-mail</p>
-                  </div>
-                  <div class="m-5 hover:text-green-300">
-                    <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
+                    <img class="rounded-full mx-auto border border-black" src="images/GitHub.svg" alt="Github" width="50">
                     <p class="pt-2 text-sm">Github</p>
                   </div>
                 </div>
