Finished setting up footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#experience" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Experience</a>
           </div>
           <div>
-            <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-green-600 border-green-600 hover:border-transparent hover:text-green-300 hover:bg-green-600 mt-4 lg:mt-0">Resume</a>
+            <a href="files/Oke-Oghene Amuwha Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-green-600 border-green-600 hover:border-transparent hover:text-green-300 hover:bg-green-600 mt-4 lg:mt-0">Resume</a>
           </div>
         </div>
       </nav>
@@ -255,20 +255,24 @@
               <div class="p-4 mb-5">
                 <h1 class="text-3xl font-bold">Contact</h1>
                 <div class="flex flex-row justify-center">
-                  <div class="m-5 hover:text-green-300">
-                    <img class="rounded-full mx-auto border border-black" src="images/LinkedIn.svg" alt="Linkedi" width="50">
-                    <p class="pt-2 text-sm">LinkedIn</p>
-                  </div>
+                  <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
+                    <div class="m-5 hover:text-green-300">
+                      <img class="rounded-full mx-auto border border-black" src="images/LinkedIn.svg" alt="Linkedi" width="50">
+                      <p class="pt-2 text-sm">LinkedIn</p>
+                    </div>
+                  </a>
                   <a href="mailto: gv4281@wayne.edu">
                     <div class="m-5 hover:text-green-300">
                       <img class="rounded-full mx-auto border border-black" src="images/Mail.svg" alt="Mail" width="50">
                       <p class="pt-2 text-sm">E-mail</p>
                     </div>
                   </a>
+                  <a href="https://github.com/amuwhao46" target="_blank">
                   <div class="m-5 hover:text-green-300">
                     <img class="rounded-full mx-auto border border-black" src="images/GitHub.svg" alt="Github" width="50">
                     <p class="pt-2 text-sm">Github</p>
                   </div>
+                  </a>
                 </div>
               </div>
               Oke Amuwha
