Added support for smooth scrolling

--- a/index.html
+++ b/index.html
@@ -249,7 +249,6 @@
               </div>
             </div>
 
-            <hr>
             <!--Footer-->
             <footer>
               <div class="p-4 mb-5">
@@ -275,8 +274,7 @@
                   </a>
                 </div>
               </div>
-              Oke Amuwha
-              &copy 2022
+              <p>Oke Amuwha | &copy 2022</p>
             </footer>
           </div>
         </div>
