Added almost all of the images I need

--- a/index.html
+++ b/index.html
@@ -90,38 +90,17 @@
             <!--Content-->
             <!--<p class="text-3xl font-bold mb-5">Me!</p>-->
             <div id="About" class="tabcontent">
-              <p class="mb-20 px-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
-                Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
-                Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
-                Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
-                Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
-                Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
-                Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-                Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+              <p class="mb-20 px-10">1
               </p>
             </div>
             <!--<p class="text-3xl font-bold mb-5">Hobbies</p>-->
             <div id="Hobbies" class="tabcontent">
-              <p class="mb-20 px-10 text-blue-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
-                Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
-                Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
-                Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
-                Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
-                Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
-                Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-                Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+              <p class="mb-20 px-10">2
               </p>
             </div>
             <!--<p class="text-3xl font-bold mb-5">Interests</p>-->
             <div id="Interests" class="tabcontent">
-              <p class="mb-20 px-10 text-purple-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
-                Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
-                Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
-                Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
-                Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
-                Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
-                Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-                Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+              <p class="mb-20 px-10">3
               </p>
             </div>
             <!--Javascript-->
@@ -212,16 +191,16 @@
               <p class="p-4 text-2xl mt-5">Code</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <div class="hover:text-green-300">
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                  <p class="pt-2 text-lg">Thing 4</p>
+                  <img class="rounded-full mx-auto" src="images/Life.png" alt="Game of life" width="150">
+                  <p class="pt-2 text-lg">Game of Life</p>
                 </div>
                 <div class="hover:text-green-300">
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                  <p class="pt-2 text-lg">Thing 5</p>
+                  <img class="rounded-full mx-auto" src="images/Discord.png" alt="Discord bot" width="150">
+                  <p class="pt-2 text-lg">Discord Bot</p>
                 </div>
                 <div class="hover:text-green-300">
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
-                  <p class="pt-2 text-lg">Thing 6</p>
+                  <img class="rounded-full mx-auto" src="images/Settings.jpeg" alt="Settings page" width="150">
+                  <p class="pt-2 text-lg">Postogon Settings Page</p>
                 </div>
               </div>
             </div>
