Finished writing personal prologue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <!--Body-->
-  <body class="parallax">
+  <body class="parallax font-roboto">
     <!--Header-->
     <header>
       <!--Navbar-->
@@ -75,25 +75,32 @@
             <div id="About" class="tabcontent">
               <p class="mb-20 px-10">Hello! My name is Oke-Oghene Amuwha, but I normally go by Oke Amuwha. 
                 I was born in Nigeria and moved to the United States in 2004. Currently I am a student at Wayne State University pursuing 
-                my bachelors in Computer Science. After I graduate I hope to work in software developement or use my skills in programming to 
-                help develope products that focus on audio.
+                my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning
+                or front end development.
               </p>
             </div>
             <!--<p class="text-3xl font-bold mb-5">Interests</p>-->
             <div id="Interests" class="tabcontent">
-              <p class="mb-20 px-10">I've always had an interest for how stuff works and how it all connects.
+              <p class="mb-20 px-10">I've always had an interest in how and why stuff just seems to work.
                 When I was younger I would always look up at the stars in amazement at whats out there. Constantly
                 learning about deep space and the mysteries thats out there. Nowawdays that sense of wonder has come rocketing 
                 home. I'm more focused on the mind and it's interpretation of reality and the parallels it has with the technology
                 we interface with. How is it that a certain vibration of particles makes the mind interpret it as music?
                 Likewise, how does tapping a certain part of my phone display cause the flashlight to light up?
-                I believe we will have, at the very least, the beginnings of an understanding of the hard problem of consciousness in my lifetime.
-                And I most definitely want to be a part of that discovery.
+                I believe we will have, at the very least, the beginnings of an understanding of the hard problem of consciousness.
+                And I want to be a part of that discovery, either contributing my own observations and measurements or indirectly
+                through my field of study. Either way it's amazing how interconnected a lot of things seem to be, even with this 
+                delicate balance it all just works.
               </p>
             </div>
             <!--<p class="text-3xl font-bold mb-5">Hobbies</p>-->
             <div id="Hobbies" class="tabcontent">
-              <p class="mb-20 px-10">3
+              <p class="mb-20 px-10">When I get an idea to do something, I start it immediately; The research, planning and developing
+                Sometimes in the midst of that excitement I end up taking a lot longer to finish the project or focusing on something else
+                something else that catches my interests. I also like watching educational youtubers like Veritasium or Vsauce
+                The way they're able to explain advanced concepts in an interactive and relatable way reinforces my love for learning.
+                I'm also pretty active, constantly working out my body and mind by going to the gym and <b>(attempting)</b> reading.
+
               </p>
             </div>
             <!--Skills-->
